feat: integrate InterviewGuide external site for pages deploy

--- a/index.html
+++ b/index.html
@@ -788,6 +788,7 @@
                 <li><a href="#learning-path">学习路径</a></li>
                 <li><a href="#topics">专题</a></li>
                 <li><a href="#resources">资源</a></li>
+                <li><a href="/AgentGuide/interview/">面经题库</a></li>
                 <li><a href="#community">社群</a></li>
             </ul>
             
@@ -828,6 +829,10 @@
                     <a href="/AgentGuide/research/" class="btn btn-secondary">
                         <span>🔬</span>
                         AI 科研指南
+                    </a>
+                    <a href="/AgentGuide/interview/" class="btn btn-secondary">
+                        <span>🧠</span>
+                        InterviewGuide
                     </a>
                     <a href="https://github.com/adongwanai/AgentGuide" class="btn btn-outline" target="_blank">
                         <span>📖</span>
@@ -1047,6 +1052,10 @@
                     <span>📖</span>
                     开始阅读 AI 科研指南
                 </a>
+                <a href="/AgentGuide/interview/" class="btn btn-primary" style="padding: 16px 40px; font-size: 1.1rem; margin-left: 12px; background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%); border: none;">
+                    <span>🎯</span>
+                    进入 InterviewGuide
+                </a>
             </div>
         </div>
     </section>
@@ -1086,6 +1095,7 @@
                     <a href="https://github.com/adongwanai/AgentGuide/tree/main/docs/03-practice">系统设计与实战</a>
                     <a href="https://github.com/adongwanai/AgentGuide/tree/main/docs/04-interview">面试指南</a>
                     <a href="/AgentGuide/research/" style="color: var(--accent-color); font-weight: 600;">🔬 AI科研指南 (Vibe Research)</a>
+                    <a href="/AgentGuide/interview/" style="color: var(--accent-color); font-weight: 600;">🧠 InterviewGuide（AI算法岗题库）</a>
                 </div>
                 
                 <div class="footer-section">
